[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/theme/yrsaFont24.tres" type="DynamicFont" id=1]
[ext_resource path="res://Imports/white.png" type="Texture" id=2]
[ext_resource path="res://UI/playerUI.gd" type="Script" id=3]

[node name="playerUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 314.0
margin_bottom = 135.0

[node name="nameTag" type="Label" parent="Panel"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 1 )
text = "Player Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hpTag" type="Label" parent="Panel"]
margin_left = 1.0
margin_top = 31.0
margin_right = 160.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 1 )
text = "HP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hpBar" type="TextureProgress" parent="Panel/hpTag"]
margin_left = 43.0
margin_top = 4.0
margin_right = 311.0
margin_bottom = 30.0
value = 69.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 2 )
tint_under = Color( 0.352941, 0.352941, 0.352941, 1 )
tint_progress = Color( 1, 0, 0, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mpTag" type="Label" parent="Panel"]
margin_top = 63.0
margin_right = 159.0
margin_bottom = 96.0
custom_fonts/font = ExtResource( 1 )
text = "MP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mpBar" type="TextureProgress" parent="Panel/mpTag"]
margin_left = 45.0
margin_top = 2.0
margin_right = 311.0
margin_bottom = 30.0
value = 69.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 2 )
tint_under = Color( 0.352941, 0.352941, 0.352941, 1 )
tint_progress = Color( 0, 0.505882, 1, 1 )
nine_patch_stretch = true

[node name="levelTag" type="Label" parent="Panel"]
margin_left = 5.0
margin_top = 98.0
margin_right = 164.0
margin_bottom = 131.0
custom_fonts/font = ExtResource( 1 )
text = "Level:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="xpTag" type="Label" parent="Panel"]
margin_left = 151.0
margin_top = 99.0
margin_right = 310.0
margin_bottom = 132.0
custom_fonts/font = ExtResource( 1 )
text = "XP:"
__meta__ = {
"_edit_use_anchors_": false
}
